[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://src/Prefabs/PlayerCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Prefabs/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Assets/Sounds/PickupCoin.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Assets/Sounds/HasBall.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Assets/Sounds/NoHasBall.wav" type="AudioStream" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )
new_ball = ExtResource( 3 )

[node name="PlayerCard" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -250.0
margin_right = 0.0
margin_bottom = 0.0

[node name="NewBallTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BallTween" type="Tween" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="RigthBallSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="HasBallSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="NoHasBallSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[connection signal="timeout" from="NewBallTimer" to="." method="_on_NewBallTimer_timeout"]
